<resources>
    <string name="app_name">Medical Cover</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="city">City</string>
    <string name="phone_number">Phone number</string>
    <string name="full_name">Full name</string>
    <string name="register">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_doctors">Doctors</string>
    <string name="title_pharmacies">Pharmacies</string>
    <string name="title_labs">Labs</string>
    <string name="title_profile">Profile</string>
    <string name="title_services">Services</string>
    <string name="title_settings">Settings</string>
    <string name="external_clinic">External Clinic</string>
    <string name="internal_clinic">Internal Clinic</string>
    <string name="top_specialties">Top Specialties</string>
    <string name="show_more_specialities">Show More Specialities</string>
    <string name="wait_time">Wait time</string>
    <string name="experience">Experience</string>
    <string name="satisfied_patients">Satisfied Patients</string>
    <string name="view_profile">View Profile</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="booking_list">Book appointment with</string>
    <string name="company_name">Company Name</string>
    <string name="policy_no">Policy No.</string>
    <string name="membership_no">Membership No.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender:</string>
    <string name="title_more">More</string>
    <string name="my_profile">My Profile</string>
    <string name="my_visits">Doctor Visits</string>
    <string name="cancel">Cancel</string>
    <string name="diagnosis">Diagnosis:</string>
    <string name="medications">Medications:</string>
    <string name="request_service">Request Service</string>
    <string name="request_medications">Request Medications</string>
    <string name="lab_radiology"><![CDATA[Lab & Radiology]]></string>
    <string name="not_added_yet">Not added yet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="phone">Phone:</string>
    <string name="branches">Branches:</string>
    <string name="add_request">Add Request</string>
    <string name="lab_tests">Lab Tests</string>
    <string name="radiology">Radiology</string>
    <string name="allergy">Allergy</string>
    <string name="surgery">Surgery</string>
    <string name="vaccine">Vaccine</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_glucose">Blood Glucose</string>
    <string name="family_history">Family History</string>
    <string name="add_new_lab_test">Add new lab test</string>
    <string name="add_new_radiology">Add new radiology</string>
    <string name="test">Test</string>
    <string name="result">Result</string>
    <string name="normal">Normal</string>
    <string name="note">Note</string>
    <string name="doctor">Doctor</string>
    <string name="place">Place</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="add_allergy">Add Allergy</string>
    <string name="add_vaccine">Add Vaccine</string>
    <string name="all">All</string>
    <string name="medication_requests">Medication Requests:</string>
    <string name="lab_requests">Lab Requests:</string>
    <string name="radiology_requests">Radiology Requests:</string>
    <string name="requests">Follow up my requests</string>
    <string name="patient_details">Patient details</string>
    <string name="patient_name">Patient Name:</string>
    <string name="patient_age">Patient Age:</string>
    <string name="patient_gender">Patient Gender:</string>
    <string name="logout">Logout</string>
    <string name="pregnancy">Pregnancy</string>
    <string name="chronic_diseases">Chronic Diseases</string>
    <string name="blood_type">Blood type</string>
    <string name="for_all">All</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pulse">Pulse</string>
    <string name="type">Type:</string>
    <string name="fasting">Fasting</string>
    <string name="postprandial">Postprandial</string>
    <string name="random">Random</string>
    <string name="family_member">Family member</string>
    <string name="description">description</string>
    <string name="place2">Place:</string>
    <string name="doctor2">Doctor:</string>
    <string name="result2">Result:</string>
    <string name="title2">Title:</string>
    <string name="date">Date:</string>
    <string name="note2">Note:</string>
    <string name="clinics">Clinics:</string>
</resources>