<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.BloodGlucoseFragment">

    <EditText
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/result"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_radioGroup" />

    <Button
        android:id="@+id/add_blood_glucose_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_form"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/result" />

    <TextView
        android:id="@+id/blood_glucose_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        tools:text="Date: 17/05/2021 08:30 AM" />

    <ImageView
        android:id="@+id/calender_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_today_24"
        app:layout_constraintBottom_toBottomOf="@+id/blood_glucose_date_tv"
        app:layout_constraintStart_toEndOf="@+id/blood_glucose_date_tv"
        app:layout_constraintTop_toTopOf="@+id/blood_glucose_date_tv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/blood_glucose_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blood_glucose_date_tv" />

    <RadioGroup
        android:id="@+id/type_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/fasting_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fasting" />

        <RadioButton
            android:id="@+id/postprandial_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postprandial" />

        <RadioButton
            android:id="@+id/random_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/random" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/type"
        app:layout_constraintBottom_toBottomOf="@+id/type_radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/type_radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>