<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.BloodPressureFragment">

    <EditText
        android:id="@+id/systolic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/systolic"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/diastolic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/diastolic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/diastolic"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/pulse"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/systolic"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pulse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/pulse"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/add_blood_pressure_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/diastolic"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_blood_pressure_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_form"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/systolic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pulse"
        app:layout_constraintTop_toTopOf="@+id/systolic" />

    <TextView
        android:id="@+id/blood_pressure_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/systolic"
        tools:text="Date: 17/05/2021 08:30 AM" />

    <ImageView
        android:id="@+id/calender_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_today_24"
        app:layout_constraintBottom_toBottomOf="@+id/blood_pressure_date_tv"
        app:layout_constraintStart_toEndOf="@+id/blood_pressure_date_tv"
        app:layout_constraintTop_toTopOf="@+id/blood_pressure_date_tv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/blood_pressure_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blood_pressure_date_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>