<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.atta.medicalcover.ui.fragments.HomeFragment"
        android:label="@string/title_doctors"
        tools:layout="@layout/fragment_pharmacies" >
        <action
            android:id="@+id/action_navigation_home_to_specialtiesFragment"
            app:destination="@id/specialtiesFragment" />
        <action
            android:id="@+id/action_navigation_home_to_doctorsFragment"
            app:destination="@id/doctorsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_pharmacies"
        android:name="com.atta.medicalcover.ui.fragments.PharmaciesFragment"
        android:label="@string/title_pharmacies"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_services"
        android:name="com.atta.medicalcover.ui.fragments.ServicesFragment"
        android:label="@string/title_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.atta.medicalcover.ui.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.atta.medicalcover.ui.fragments.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/doctorsFragment"
        android:name="com.atta.medicalcover.ui.fragments.DoctorsFragment"
        android:label="@string/title_doctors"
        tools:layout="@layout/fragment_doctors">
        <argument
            android:name="specialty"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="clinicType"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_doctorsFragment_to_doctorDetailsFragment"
            app:destination="@id/doctorDetailsFragment" />
        <action
            android:id="@+id/action_doctorsFragment_to_bookingFragment"
            app:destination="@id/bookingFragment" />
    </fragment>
    <fragment
        android:id="@+id/specialtiesFragment"
        android:name="com.atta.medicalcover.ui.fragments.SpecialtiesFragment"
        android:label="Specialties"
        tools:layout="@layout/fragment_specialties" >
        <action
            android:id="@+id/action_specialtiesFragment_to_doctorsFragment"
            app:destination="@id/doctorsFragment" />
        <argument
            android:name="type"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/bookingFragment"
        android:name="com.atta.medicalcover.ui.fragments.BookingFragment"
        android:label="Select a time slot"
        tools:layout="@layout/fragment_booking">
        <argument
            android:name="clinic"
            app:argType="com.atta.medicalcover.Clinic" />
        <argument
            android:name="doctor"
            app:argType="com.atta.medicalcover.Doctor" />
        <action
            android:id="@+id/action_bookingFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/doctorDetailsFragment"
        android:name="com.atta.medicalcover.ui.fragments.DoctorDetailsFragment"
        android:label="fragment_doctor_details"
        tools:layout="@layout/fragment_doctor_details" >
        <argument
            android:name="doctor"
            app:argType="com.atta.medicalcover.Doctor" />
        <action
            android:id="@+id/action_doctorDetailsFragment_to_bookingFragment"
            app:destination="@id/bookingFragment" />
    </fragment>
</navigation>